--- a/excelapp/templates/results.html
+++ b/excelapp/templates/results.html
@@ -1,26 +1,16 @@
+<!-- excelapp/templates/results.html -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>Results</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Results</h1>
-        </header>
-        <div class="result">
-            <h1>Results for {{ year }}</h1>
-            <p>The result for the selected command is: {{ result }}</p>
-            <a href="{% url 'excelapp:select_year' %}">Select Another Year</a>
-            <a href="{% url 'excelapp:graph' product=product year=year %}">Show Graphs</a>
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 Your Company</p>
-    </footer>
+    <h1>{{ command }} in {{ year }}</h1>
+    <p>The result for the selected command is: {{ result }}</p>
+    <a href="{% url 'excelapp:select-year' %}">Select Another Year</a>
+    <a href="{% url 'excelapp:command-selector' year %}">Select Another Command</a>
 </body>
 </html>
-
