--- a/excelapp/templates/base.html
+++ b/excelapp/templates/base.html
@@ -5,26 +5,26 @@
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/persian-datepicker@1.2.0/dist/css/persian-datepicker.min.css">
+    <link rel="stylesheet" href="{% static 'admin/jquery.ui.datepicker.jalali/themes/base/jquery-ui.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 </head>
 <body>
     <div class="container">
         {% block content %}{% endblock %}
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/persian-date@1.2.0/dist/persian-date.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/persian-datepicker@1.2.0/dist/js/persian-datepicker.min.js"></script>
+    <script src="{% static 'admin/js/django_jalali.min.js' %}"></script>
     <script>
         $(document).ready(function() {
             $("#date").persianDatepicker({
-                format: 'YYYY-MM-DD',
+                format: 'YYYY/MM/DD',
                 initialValue: false,
                 autoClose: true,
                 toolbox: {
                     calendarSwitch: {
                         enabled: true,
-                        format: 'YYYY-MM-DD'
+                        format: 'YYYY/MM/DD'
                     }
                 }
             });
