--- a/excelapp/templates/select_product.html
+++ b/excelapp/templates/select_product.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
-{% block title %}انتخاب محصول{% endblock %}
+{% block title %}انتخاب تاریخ{% endblock %}
 
 {% block content %}
-    <form method="post" action="{% url 'excelapp:select_product' date=date command=command customer=customer %}">
+    <form method="post" action="{% url 'excelapp:select_date' %}">
         {% csrf_token %}
-        <h1>انتخاب محصول</h1>
+        <h1>انتخاب تاریخ</h1>
         <div class="input-group">
-            <label for="product">محصول:</label>
-            <input type="text" id="product" name="product" required>
+            <label for="date">تاریخ:</label>
+            <input type="text" id="date" name="date" required>
         </div>
         <button type="submit">ارسال</button>
     </form>
